WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150848
Fix touch event sending crash in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=150848
Summary
Fix touch event sending crash in WebKitTestRunner
Wenson Hsieh
Reported
2015-11-03 12:30:13 PST
The additional force event added in -[HIDEventGenerator _createIOHIDEventType:eventType] causes us to crash and is redundant (see Radar for details).
Attachments
Patch
(1.69 KB, patch)
2015-11-03 13:15 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2015-11-03 12:31:02 PST
<
rdar://problem/23360841
>
Wenson Hsieh
Comment 2
2015-11-03 13:15:14 PST
Created
attachment 264717
[details]
Patch
WebKit Commit Bot
Comment 3
2015-11-03 13:41:13 PST
Comment on
attachment 264717
[details]
Patch Clearing flags on attachment: 264717 Committed
r191974
: <
http://trac.webkit.org/changeset/191974
>
WebKit Commit Bot
Comment 4
2015-11-03 13:41:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug