Fix touch event sending crash in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=150848 <rdar://problem/23360841>

Reviewed by Simon Fraser.

Fixes a redundant force event generated by HIDEventGenerator. See the Radar diagnosis for more details.

* WebKitTestRunner/ios/HIDEventGenerator.mm:
(-[HIDEventGenerator _createIOHIDEventType:]): Deleted.


Canonical link: https://commits.webkit.org/169060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191974 268f45cc-cd09-0410-ab3c-d52691b4dbfc